PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Remove the ~C-c /~ global binding to *hide-lines* because it conflicts with the pcre2el command prefix.
- Add *pel-align-words-vertically*, bound to ~<f11> t a w~. It aligns all words of lines in the marked are
  in columns.  It uses the new pel-hash functions that provide hash of lists.
- Add *pel-perl-critic*, bound to ~<f12> c~, which analyzes the Perl file visited in the current buffer
  with the perlcritic application.
- Modified some key bindings for search:
  - changed *pel-search-word-from-top* from ~<f11> s .~ to ~<f11> s w .~
  - bound *isearch-forward-symbol-at-point* to ~<f11> s .~
  - bound *isearch-forward-symbol* to ~<f11> s __~
- Add *pel-multi-occur-in-all*, bound to ~M-s //~ which searches all buffers visiting file or all buffers.
  Also added ~M-s m~ binding to *pel-multi-occur-in-this-mode*.
- Add support for the *crontab-mode* a major mode for editing crontab files.  Activated by *pel-use-crontab-mode* user-option.
- Add *pel-cperl-show-trailing-whitespace-normally* user-option to control the way trailing whitespace characters are shown in *cpel-mode* buffers.
  By default they are shown as underscores, by setting pel-cperl-show-trailing-whitespace-normally to t they
  are shown, like other modes, with the trailing-whitespace face (which is red by default).
- Add support for the emacs-ssh-file-modes making Emacs aware of the format of the SSH /known_hosts/ and /authorized_keys/ files.
  This is activated by the *pel-use-emacs-ssh-file-modes* user-option.
- Add Emacs-style command line key bindings description in the [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/lang/bash.pdf][𝕻𝔩 - Bash]] PDF.
- In rpm-spec-mode buffers: add *pel-rpm-build* bound to ~<f12> b~ and *pel-rpm-spec-lint* bound to ~<f12> l~ .