@@ -2,6 +2,11 @@ PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-
 
 * Changes since Version 0.4.1:
 ** Modifications, Fixes and Improvements:
+- Add utilities to list edesktops+ desktops currently available, used and by what process.
+  These shell utilities are located in the PEL bin directory.
+  The PEL setup/install-emacs-edesktops.sh script can be used to create symlinks into
+  the $HOME/bin directory and verifies if that is in the current PATH.
+  These help checking which Emacs desktop session is currently being used in a system.
 - Remove the ~C-c /~ global binding to *hide-lines* because it conflicts with the pcre2el command prefix.
 - Add *pel-align-words-vertically*, bound to ~<f11> t a w~. It aligns all words of lines in the marked are
   in columns.  It uses the new pel-hash functions that provide hash of lists.
